--- a/nox.html
+++ b/nox.html
@@ -71,11 +71,20 @@ font-weight: 500;
 font-size: 18px;
 line-height: 27px;
 text-align: center;
+ padding: 0 5rem;
 
 color: #888888;
 
 
         }
+        .cs{
+            /*coming soon*/
+    font: italic 1.2em "Fira Sans", serif;
+    font-size: 50px;
+    color:#004a2f;
+   text-align: center;
+   margin-top: 6rem;
+}
     </style>
     <header>
     
@@ -92,6 +101,7 @@ color: #888888;
                               captivate viewers, compelling them to know more of what is happening around them. 
                               This segment not only aims to promote environmental awarness, but also hopes to bring about an interest 
                               among the people and allure them to know more about our Mother Earth.</P>
+                             <p class="cs"><strong> Coming Soon . . .</strong> </p>
         </div>
                        
     </header>                
