--- a/home.html
+++ b/home.html
@@ -77,18 +77,30 @@
     <h2>From the Director's Desk</h2>
     <div class="row gx-5">
       <div class="col-lg-4 text-center">
-        <img src="./images/director.png" class="img-fluid rounded mb-3" widthalt="">
+        <img src="./images/director.png" class="img-fluid rounded-circle mb-3" widthalt="">
         <h5>Sivaji Bandyopadhyay</h5>
         <p>Director, Nit Silchar</p>
       </div>
-      <div class="col-lg-8">
+      <div class="col-lg-8 d-flex justify-content-center">
         <p class="homeContent">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam voluptatum quaerat exercitationem itaque
-          dolore sint nostrum similique voluptatem dignissimos ea, odio ut minima porro adipisci reprehenderit
-          repellendus magnam laudantium aperiam?
-          Reprehenderit numquam id amet quae totam dolorum commodi eaque molestias expedita! Aliquid laborum facere
-          expedita dignissimos adipisci tempora, quibusdam ut ipsa corporis repudiandae ullam perferendis, laboriosam
-          quis, eligendi error esse.
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+          sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+          nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
+          aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam
+          dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
+          vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
+          ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque
+          rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+          Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing
+          sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et
+          ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+          eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
+          consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate
+          eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem
+          in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus
+          et ultrices posuere cubilia Curae; In ac dui quis mi
+
+
         </p>
       </div>
     </div>
@@ -215,7 +227,7 @@
 
 
   <!-- blog starts -->
-  <section class="container">
+  <!-- <section class="container">
     <h2>Blog</h2>
     <div class="row gx-5">
       <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
@@ -268,7 +280,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- blog ends -->
 
 
