resolving blog page commit

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-  <!-- <link rel="stylesheet" href="./styles/footer.css"> -->
+  <link rel="stylesheet" href="./styles/footer.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,100 +104,6 @@ border-radius: 16px;
     <strong> Coming soon . . .</strong>
   </p>
 </body>
-
-
-<head>
-  <meta charset="utf-8">
-  <title>Blog</title>
-  <style>
-  h2{
-
-color: #43AB5F;
-
-
-/* Inside auto layout */
-
-flex: none;
-order: 0;
-flex-grow: 0;
-    }
-    hr{
-      width: 98px;
-height: 0px;
-
-border: 2px solid rgba(67, 171, 95, 0.8);
-/* Inside auto layout */
-
-flex: none;
-order: 1;
-flex-grow: 0;
-
-    }
-
-    p{
-      width: 1173px;
-height: 27px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 27px;
-/* identical to box height */
-
-
-
-/* 888888 */
-
-color: #888888;
-
-
-/* Inside auto layout */
-
-flex: none;
-order: 2;
-flex-grow: 0;
-    }
-    div {
-      display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
-padding: 14px;
-gap: 14px;
-
-width: 367px;
-height: 498.06px;
-
-background: #FFFFFF;
-box-shadow: -1.57565px 0px 6.30261px rgba(0, 0, 0, 0.08), 1.57565px 1.57565px 6.30261px rgba(0, 0, 0, 0.08);
-border-radius: 16px;
-
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </style>
-
-
-    </head>
-    <body>
-      <h2>
-<center>
-  Blog
-</center>
-
-
 
         <hr>
       </h2>
