--- a/home.html
+++ b/home.html
@@ -1,23 +1,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Linking Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!--Linking custom CSS-->
-    <link rel="stylesheet" href="./styles/home.css">
-    <!--Linking FontAwesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--Linking SplideJS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/themes/splide-default.min.css">
-    <!--Linking Poppins regular 300, 400 and 500 from Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Linking Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!--Linking custom CSS-->
+  <link rel="stylesheet" href="./styles/home.css">
+  <!--Linking FontAwesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!--Linking SplideJS-->
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/themes/splide-default.min.css">
+  <!--Linking Poppins regular 300, 400 and 500 from Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  <title>Home</title>
 </head>
 
 <body>
@@ -139,60 +142,6 @@
     </div>
   </section>
   <!-- Achivements ends -->
-
-<footer>
-  <div class="footer_containeer">
-      <div class="box"><p>Contact Us</p>
-      <div class="footer_box_1">
-          <i class="fa-solid fa-phone"></i>
-          <a href="tel:123-456-7890" target="_blank">+91 1234567890</a>
-      </div>
-      <div class="footer_box_1">
-          <i class="fa-solid fa-location-dot"></i>
-          <a href="https://www.google.com/maps/place/National+Institute+Of+Technology,+Silchar/@24.7577144,92.7901042,17z/data=!3m1!4b1!4m5!3m4!1s0x374e49dcb63bae9b:0x81efa836714a289b!8m2!3d24.7577144!4d92.7922929" target="_blank">NIT SILCHAR</a>
-      </div>
-      <div class="footer_box_1">
-          <i class="fa-regular fa-envelope"></i>
-          <a href="mailto: ecoclubactivity@nits.ac.in" target="blank">ecoclubactivity@nits.ac.in</a>
-      </div>
-      <div class="footer_box_1">
-          <i class="fa-brands fa-instagram"></i>
-          <a href="https://www.instagram.com/eco_club_nits/" target="blank">eco_club_nits</a>
-      </div>
-      <div class="footer_box_1">
-          <i class="fa-brands fa-facebook"></i>
-          <a href="https://l.instagram.com/?u=https%3A%2F%2Fm.facebook.com%2Fnitsecoclub%2F%3Ftsid%3D0.7935080479496242%26source%3Dresult&e=ATP7jhg69HRisUR1Cv9UkrgE14602QuQBSYfivVTCdVj7Sg0bUUJuJAGhLgxOqhLhkexllnJJsnX4qKnBHr7Qw&s=1" target="_blank">@nitsecoclub</a>
-      </div>
-      <div class="footer_box_1">
-          <i class="fa-brands fa-twitter"></i>
-          <a href="https://twitter.com/NitsEco" target="_blank">@NitsEco</a>
-      </div>
-  </div>
-  <div class="footer_box"><p>Quick Links</p>
-      <ul>
-          <li><span>-</span><a href="#">Noixorgo</a></li>
-          <li><span>-</span><a href="#">Our Events</a></li>
-          <li><span>-</span><a href="#">Our Blogs</a></li>
-          <li><span>-</span><a href="#">Our Gallery</a></li>
-          <li><span>-</span><a href="#">Our Team</a></li>
-      </ul>
-  </div>
-  <div class="footer_box"><p>Developers</p>
-      <ul>
-          <li><span>-</span><a href="#">Members</a></li>
-      </ul>
-  </div>
-  <div class="footer_box"><p>Mail Us</p>
-      <div class="footer_box_1" id="mail">
-  <form action="">
-      <input type="email" name="email" id="email" required placeholder="@your email.com">
-  </form>
-  <i class="fa-solid fa-paper-plane"></i>
-  </div>
-  </div>
-  </div>
-</footer>
-
 
   <!-- Green initiatives starts -->
   <section class="container">
