resolving issues and adding the header and footer

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
   <title>Blog</title>
 
 </head>
-<style>
+<!-- <style>
   h2{
 
 color: #43AB5F;
@@ -87,8 +87,41 @@ border-radius: 16px;
 
 
 
-    </style>
+    </style> -->
 <body>
+  <div class="navbar-container">
+
+    <div class="navbar-logo-name">
+
+      <img id="logo-img" src="./images/eco-club-logo.jpg" alt="">
+
+      <h3 id="club-name">eco club</h3>
+
+    </div>
+
+
+
+    <a href="./home.html">HOME</a>
+
+
+    <a href="./nox.html">NOIXORGO</a>
+
+
+
+    <a href="./Gallery.html">GALLERY</a>
+
+
+    <a href="./Event_photos.html">EVENTS</a>
+
+
+    <a href="./blog.html">BLOG</a>
+
+
+    <a href="./members.html">TEAM</a>
+
+
+
+  </div>
   <h1>
     <center>Blog</center>
     <hr>
