--- a/nox.html
+++ b/nox.html
@@ -10,6 +10,48 @@
 </head>
 <body>
     <style>
+
+.navbar-container {
+    width: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 60px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    align-items: center;
+  }
+
+  a {
+    text-decoration: none;
+    position: relative;
+    left: 55px;
+    color: black;
+
+  }
+
+
+  a:hover {
+    color: rgb(51, 223, 51);
+  }
+
+  #club-name {
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    top: -10px;
+  }
+
+  #logo-img {
+
+    height: 26px;
+    width: 26px;
+    position: relative;
+    left: -35px;
+    top: 24px;
+    border: 0px;
+    border-radius: 16px;
+  }
+
         header{
             border:0ch
         }
@@ -87,6 +129,41 @@ color: #888888;
    margin-top: 6rem;
 }
     </style>
+
+<div class="navbar-container">
+
+    <div class="navbar-logo-name">
+
+      <img id="logo-img" src="./images/eco-club-logo.jpg" alt="">
+
+      <h3 id="club-name">eco club</h3>
+
+    </div>
+
+
+
+    <a href="./home.html">HOME</a>
+
+
+    <a href="./nox.html">NOIXORGO</a>
+
+
+
+    <a href="./Gallery.html">GALLERY</a>
+
+
+    <a href="./Event_photos.html">EVENTS</a>
+
+
+    <a href="./blog.html">BLOG</a>
+
+
+    <a href="./members.html">TEAM</a>
+
+
+
+  </div>
+
     <header>
     
     <div class="first"></div>
