some changes to gallery added

--- a/Gallery.html
+++ b/Gallery.html
@@ -59,12 +59,12 @@
 
         <div class="card_s01 row">
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <img src="./images/Swacchta Pakhwada.png" class="card-img-top" alt="Swacchta Pakhwada" style="height: 100%;">
+                <img src="./images/Swacchta Pakhwada.png" class="card-img-top" alt="Swacchta Pakhwada">
                 <div class="card-body">
                 <p class="card-text">Swacchta Pakhwada</p>
                 </div>
             </div>
-            <div class="card my-3 my-xl-0" style="width: 28rem;" href="#">
+            <div class="card my-3 my-xl-0" style="width: 28rem;">
                 <img src="./images/North East Green Summit.png" class="card-img-top" alt="North East Green Summit">
                 <div class="card-body">
                 <p class="card-text">North-East Green Summit</p>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="card_s1 row">
-            <div class="card my-3 my-xl-0" style="width: 28rem;" href="#">
+            <div class="card my-3 my-xl-0" style="width: 28rem;">
                 <img src="./images/Gandhi Jayanti.png" class="card-img-top" alt="Gandhi Jayanti">
                 <div class="card-body">
                 <p class="card-text">Gandhi Jayanti</p>
