--- a/Event_photos.html
+++ b/Event_photos.html
@@ -46,9 +46,9 @@
       </div>
 
     <div class="container1">
-        <div class="text pb-5 pt-4 text-center">
-            <h1>Gandhi Jayanti</h1>
-            <hr>
+        <div class="text pt-5 text-center">
+            <h2>Gandhi Jayanti</h2>
+            <!-- <hr> -->
         </div>
     </div>
 
@@ -77,7 +77,7 @@
                 <img src="./images/Gandhi Jayanti.png" alt="...">
             </div>
         </div>
-        <div class="row text-center row">
+        <div class="row text-center row pb-5">
             <div class="col-xs-12 my-3 my-xl-0 pt-4 px-3">
                 <img src="./images/Gandhi Jayanti.png" alt="...">
             </div>
