--- a/Gallery.html
+++ b/Gallery.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/gallery.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/footer.css">
     <title>Gallery</title>
 </head>
@@ -49,10 +50,10 @@
 
     <div class="container1">
         <div class="name">
-            <h1 class="Photos">
+            <h2 class="Photos">
                 Event Photos
-            </h1>
-            <hr class="line" />
+            </h2>
+            <!-- <hr class="line" /> -->
         </div>
 
         <!-- for 1st row of cards -->
@@ -79,7 +80,7 @@
                 </div>
             </div>
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <img src="./images/Gandhi Jayanti.png" class="card-img-top" alt="World Environment Day">
+                <img src="./images/IMG20220605091911.jpg" style="width: 26rem; height: 17rem;" class="card-img-top" alt="World Environment Day">
                 <div class="card-body">
                 <p class="card-text">World Environment Day</p>
                 </div>
@@ -95,7 +96,7 @@
             <h2 class="Photos">
                 Nature's Click
             </h2>
-            <hr class="line" />
+            <!-- <hr class="line" /> -->
         </div>
 
         <!-- for 1st row of cards -->
@@ -152,7 +153,7 @@
             <h2 class="Photos">
                 Beauty of NITS
             </h2>
-            <hr class="line" />
+            <!-- <hr class="line" /> -->
         </div>
 
         <!-- for 1st row of cards -->
