--- a/Gallery.html
+++ b/Gallery.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <img src="./images/IMG20220605091911.jpg" style="width: 26rem; height: 17rem;" class="card-img-top" alt="World Environment Day">
+                <img src="./images/World Environment Day.jpg" style="width: 26rem; height: 17rem;" class="card-img-top" alt="World Environment Day">
                 <div class="card-body">
                 <p class="card-text">World Environment Day</p>
                 </div>
