updating the UI

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     <a href="./Event_photos.html">EVENTS</a>
 
 
-    <a href="./blog.html">BLOG</a>
+    <a href="./blog2.html">BLOG</a>
 
 
     <a href="./members.html">TEAM</a>
@@ -416,7 +416,7 @@
 
   <footer>
     <div class="footer_containeer">
-        <div class="box"><p>Contact Us</p>
+        <div class="footer_box"><p>Contact Us</p>
         <div class="footer_box_1">
             <i class="fa-solid fa-phone"></i>
             <a href="tel:123-456-7890" target="_blank">+91 1234567890</a>
