--- a/nox.html
+++ b/nox.html
@@ -187,7 +187,7 @@ color: #888888;
     
     <footer>
         <div class="footer_containeer">
-            <div class="box"><p>Contact Us</p>
+            <div class="footer_box"><p>Contact Us</p>
             <div class="footer_box_1">
                 <i class="fa-solid fa-phone"></i>
                 <a href="tel:123-456-7890" target="_blank">+91 1234567890</a>
