debugging the pages

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     <a href="./Event_photos.html">EVENTS</a>
 
 
-    <a href="./blog2.html">BLOG</a>
+    <a href="./blog.html">BLOG</a>
 
 
     <a href="./members.html">TEAM</a>
