changes to upcoming events in home

--- a/home.html
+++ b/home.html
@@ -98,27 +98,35 @@
   <section class="container">
     <h2>Achievements</h2>
     <div class="row gx-5">
-      <div class="col-sm-4 col-xs-12 py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <!--One achievement card-->
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/achievements.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-center">District Green Champion Award</h5>
-
+            <div class="card-content">
+              <p class="card-text">Green environment, our requirement: NIT Silchar was honoured with the District Green
+                Champion award by the government of India.
+              </p>
+            </div>
           </div>
         </div>
         <!--Card ends-->
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 d-flex align-items-stretch py-3">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/achievements.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-center">UI Green Metric Ranking 200 in 2021</h5>
-
+            <div class="card-content">
+              <p class="card-text">NIT Silchar was placed 200th among 956 universities across the world by the UI Green
+                Metric World University Rankings, 2021. Green hearth, Green Earth; a few steps today ensures a greener
+                future tomorrow!</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/achievements.jpg" alt="Card image cap">
           <div class="card-body">
@@ -136,24 +144,44 @@
   <section class="container">
     <h2>Green Initiatives</h2>
     <div class="row gx-5">
-      <div class="col-sm-6 col-xs-12 py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/initiatives.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title text-center">Solar Panel</h5>
+            <h5 class="card-title text-center">Installation of waste bins in the campus</h5>
             <div class="card-content">
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <p class="card-text">Under the NITS Eco Club, several waste bins all over the campus were installed which
+                enabled people to easily dispose off their garbage. Every few metres inside the campus, one can find a
+                dustbin which has proven to be of great help for the students, professors and visitors in the long run.
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-6 col-xs-12 py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/initiatives.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title text-center">Solar Panel</h5>
+            <h5 class="card-title text-center">Independence day celebration under the Eco Club</h5>
             <div class="card-content">
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <p class="card-text">On the occasion of India’s 76th Independence Day, an entire garden was put together
+                by planting several saplings, one of which was planted by our Director. Several members of the Eco Club
+                were also present on that day, who took part in this green drive, thereby working towards a cleaner and
+                better future for the institution.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+        <div class="card card-shadow">
+          <img class="card-img-top" src="./images/initiatives.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title text-center">Plantations for a greener tomorrow</h5>
+            <div class="card-content">
+              <p class="card-text">The NITS Eco Club conducts several plantations every now and then to celebrate the
+                various occasions that take place in our campus. This is a very commendable initiative taken by the club
+                which ensures that our campus maintains an ecological balance while also working towards making NIT
+                Silchar greener.</p>
             </div>
           </div>
         </div>
@@ -167,11 +195,39 @@
   <section class="container">
     <h2>Upcoming Events</h2>
     <div class="row gx-5">
-      <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">A walk for healthy environment</h5>
+            <h5 class="card-title">Speech Competition (Forest Conservation)</h5>
+            <div class="card-content">
+              <p class="event-header">Paul Walker, CEO of Green Organization</p>
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Thursday, 8 Sept 2022 <i
+                  class="fa-regular fa-clock"></i>10 A.M.</p>
+              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+        <div class="card card-shadow">
+          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Slogan Writing Competition (Forest Conservation)</h5>
+            <div class="card-content">
+              <p class="event-header">Paul Walker, CEO of Green Organization</p>
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Monday, 12 Sept 2022 <i
+                  class="fa-regular fa-clock"></i>10 A.M.</p>
+              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+        <div class="card card-shadow">
+          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Poster Making Competition (Forest Conservation)</h5>
             <div class="card-content">
               <p class="event-header">Paul Walker, CEO of Green Organization</p>
               <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
@@ -181,11 +237,11 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">A walk for healthy environment</h5>
+            <h5 class="card-title">Speech Competition (Water Conservation)</h5>
             <div class="card-content">
               <p class="event-header">Paul Walker, CEO of Green Organization</p>
               <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
@@ -195,11 +251,39 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">A walk for healthy environment</h5>
+            <h5 class="card-title">Slogan Writing Competition (Water Conservation)</h5>
+            <div class="card-content">
+              <p class="event-header">Paul Walker, CEO of Green Organization</p>
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+                  class="fa-regular fa-clock"></i>10 A.M.</p>
+              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+        <div class="card card-shadow">
+          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Poster Making Competition (Water Conservation)</h5>
+            <div class="card-content">
+              <p class="event-header">Paul Walker, CEO of Green Organization</p>
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+                  class="fa-regular fa-clock"></i>10 A.M.</p>
+              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 offset-4 col-xs-12 py-3 d-flex align-items-stretch">
+        <div class="card card-shadow">
+          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Photography Competition(Swachhata And Us)</h5>
             <div class="card-content">
               <p class="event-header">Paul Walker, CEO of Green Organization</p>
               <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
@@ -215,10 +299,10 @@
 
 
   <!-- blog starts -->
-  <section class="container">
+  <!-- <section class="container">
     <h2>Blog</h2>
     <div class="row gx-5">
-      <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12  py-3">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/blog.png" alt="Card image cap">
           <div class="card-body">
@@ -235,7 +319,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12  py-3">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/blog.png" alt="Card image cap">
           <div class="card-body">
@@ -252,7 +336,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12  py-3 py-sm-0">
+      <div class="col-sm-4 col-xs-12  py-3">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/blog.png" alt="Card image cap">
           <div class="card-body">
@@ -268,7 +352,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- blog ends -->
 
 
