--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@
   <section class="container">
     <h2>Upcoming Events</h2>
     <div class="row gx-5">
-      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
@@ -209,7 +209,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
@@ -223,7 +223,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
@@ -237,7 +237,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
@@ -251,7 +251,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
@@ -265,7 +265,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
@@ -279,7 +279,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 offset-4 col-xs-12 py-3 d-flex align-items-stretch">
+      <div class="col-sm-4 offset-sm-4 offset-0 col-xs-12 py-4">
         <div class="card card-shadow">
           <img class="card-img-top" src="./images/events.png" alt="Card image cap">
           <div class="card-body">
