pre-final commits to home

--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
     <div class="row gx-5">
       <div class="col-lg-4 text-center">
         <img src="./images/director.png" class="img-fluid rounded-circle mb-3" widthalt="">
-        <h5>Sivaji Bandyopadhyay</h5>
+        <h5>Prof. Sivaji Bandyopadhyay</h5>
         <p>Director, Nit Silchar</p>
       </div>
       <div class="col-lg-8 d-flex justify-content-center">
@@ -241,100 +241,100 @@
   <section class="container">
     <h2>Upcoming Events</h2>
     <div class="row gx-5">
-      <div class="col-sm-4 col-xs-12 py-4">
+      <div class="col-sm-4 col-xs-12 py-4 d-flex align-items-stretch">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/speech-forest.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Speech Competition (Forest Conservation)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
               <p class="event-time"><i class="fa-regular fa-calendar"></i>Thursday, 8 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-4">
+      <div class="col-sm-4 col-xs-12 py-4 d-flex align-items-stretch">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/slogan-forest.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Slogan Writing Competition (Forest Conservation)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
               <p class="event-time"><i class="fa-regular fa-calendar"></i>Monday, 12 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-4">
+      <div class="col-sm-4 col-xs-12 py-4 d-flex align-items-stretch">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/poster-forest.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Poster Making Competition (Forest Conservation)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
-              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Friday, 2 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-4">
+      <div class="col-sm-4 col-xs-12 py-4 d-flex align-items-stretch">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/speech-water.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Speech Competition (Water Conservation)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
-              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday, 11 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-4">
+      <div class="col-sm-4 col-xs-12 py-4 d-flex align-items-stretch">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/slogan-water.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Slogan Writing Competition (Water Conservation)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
-              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Wednesday, 14 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-12 py-4">
+      <div class="col-sm-4 col-xs-12 py-4 d-flex align-items-stretch">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/poster-water.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Poster Making Competition (Water Conservation)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
-              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Monday, 12 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
       </div>
       <div class="col-sm-4 offset-sm-4 offset-0 col-xs-12 py-4">
         <div class="card card-shadow">
-          <img class="card-img-top" src="./images/events.png" alt="Card image cap">
+          <img class="card-img-top" src="./images/photography.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Photography Competition(Swachhata And Us)</h5>
             <div class="card-content">
-              <p class="event-header">Paul Walker, CEO of Green Organization</p>
-              <p class="event-time"><i class="fa-regular fa-calendar"></i>Sunday 2 Dec 2022 <i
+              <!-- <p class="event-header">Paul Walker, CEO of Green Organization</p> -->
+              <p class="event-time"><i class="fa-regular fa-calendar"></i>Saturday, 10 Sept 2022 <i
                   class="fa-regular fa-clock"></i>10 A.M.</p>
-              <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p>
+              <!-- <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliq</p> -->
             </div>
           </div>
         </div>
@@ -500,56 +500,62 @@
 
   <footer>
     <div class="footer_containeer">
-        <div class="footer_box"><p>Contact Us</p>
+      <div class="footer_box">
+        <p>Contact Us</p>
         <div class="footer_box_1">
-            <i class="fa-solid fa-phone"></i>
-            <a href="tel:123-456-7890" target="_blank">+91 1234567890</a>
+          <i class="fa-solid fa-phone"></i>
+          <a href="tel:123-456-7890" target="_blank">+91 1234567890</a>
         </div>
         <div class="footer_box_1">
-            <i class="fa-solid fa-location-dot"></i>
-            <a href="https://www.google.com/maps/place/National+Institute+Of+Technology,+Silchar/@24.7577144,92.7901042,17z/data=!3m1!4b1!4m5!3m4!1s0x374e49dcb63bae9b:0x81efa836714a289b!8m2!3d24.7577144!4d92.7922929" target="_blank">NIT SILCHAR</a>
+          <i class="fa-solid fa-location-dot"></i>
+          <a href="https://www.google.com/maps/place/National+Institute+Of+Technology,+Silchar/@24.7577144,92.7901042,17z/data=!3m1!4b1!4m5!3m4!1s0x374e49dcb63bae9b:0x81efa836714a289b!8m2!3d24.7577144!4d92.7922929"
+            target="_blank">NIT SILCHAR</a>
         </div>
         <div class="footer_box_1">
-            <i class="fa-regular fa-envelope"></i>
-            <a href="mailto: ecoclubactivity@nits.ac.in" target="blank">ecoclubactivity@nits.ac.in</a>
+          <i class="fa-regular fa-envelope"></i>
+          <a href="mailto: ecoclubactivity@nits.ac.in" target="blank">ecoclubactivity@nits.ac.in</a>
         </div>
         <div class="footer_box_1">
-            <i class="fa-brands fa-instagram"></i>
-            <a href="https://www.instagram.com/eco_club_nits/" target="blank">eco_club_nits</a>
+          <i class="fa-brands fa-instagram"></i>
+          <a href="https://www.instagram.com/eco_club_nits/" target="blank">eco_club_nits</a>
         </div>
         <div class="footer_box_1">
-            <i class="fa-brands fa-facebook"></i>
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fm.facebook.com%2Fnitsecoclub%2F%3Ftsid%3D0.7935080479496242%26source%3Dresult&e=ATP7jhg69HRisUR1Cv9UkrgE14602QuQBSYfivVTCdVj7Sg0bUUJuJAGhLgxOqhLhkexllnJJsnX4qKnBHr7Qw&s=1" target="_blank">@nitsecoclub</a>
+          <i class="fa-brands fa-facebook"></i>
+          <a href="https://l.instagram.com/?u=https%3A%2F%2Fm.facebook.com%2Fnitsecoclub%2F%3Ftsid%3D0.7935080479496242%26source%3Dresult&e=ATP7jhg69HRisUR1Cv9UkrgE14602QuQBSYfivVTCdVj7Sg0bUUJuJAGhLgxOqhLhkexllnJJsnX4qKnBHr7Qw&s=1"
+            target="_blank">@nitsecoclub</a>
         </div>
         <div class="footer_box_1">
-            <i class="fa-brands fa-twitter"></i>
-            <a href="https://twitter.com/NitsEco" target="_blank">@NitsEco</a>
+          <i class="fa-brands fa-twitter"></i>
+          <a href="https://twitter.com/NitsEco" target="_blank">@NitsEco</a>
         </div>
-    </div>
-    <div class="footer_box"><p>Quick Links</p>
+      </div>
+      <div class="footer_box">
+        <p>Quick Links</p>
         <ul>
-            <li><span>-</span><a href="#">Noixorgo</a></li>
-            <li><span>-</span><a href="#">Our Events</a></li>
-            <li><span>-</span><a href="#">Our Blogs</a></li>
-            <li><span>-</span><a href="#">Our Gallery</a></li>
-            <li><span>-</span><a href="#">Our Team</a></li>
+          <li><span>-</span><a href="#">Noixorgo</a></li>
+          <li><span>-</span><a href="#">Our Events</a></li>
+          <li><span>-</span><a href="#">Our Blogs</a></li>
+          <li><span>-</span><a href="#">Our Gallery</a></li>
+          <li><span>-</span><a href="#">Our Team</a></li>
         </ul>
-    </div>
-    <div class="footer_box"><p>Developers</p>
+      </div>
+      <div class="footer_box">
+        <p>Developers</p>
         <ul>
-            <li><span>-</span><a href="#">Members</a></li>
+          <li><span>-</span><a href="#">Members</a></li>
         </ul>
-    </div>
-    <div class="footer_box"><p>Mail Us</p>
+      </div>
+      <div class="footer_box">
+        <p>Mail Us</p>
         <div class="footer_box_1" id="mail">
-    <form action="">
-        <input type="email" name="email" id="email" required placeholder="@your email.com">
-    </form>
-    <i class="fa-solid fa-paper-plane"></i>
+          <form action="">
+            <input type="email" name="email" id="email" required placeholder="@your email.com">
+          </form>
+          <i class="fa-solid fa-paper-plane"></i>
+        </div>
+      </div>
     </div>
-    </div>
-    </div>
-</footer>
+  </footer>
 
 
   <!--Importing SplideJS and SplideJS script-->
