another prefinal edit to home

--- a/home.html
+++ b/home.html
@@ -113,8 +113,8 @@
     <div class="row gx-5">
       <div class="col-lg-4 text-center">
         <img src="./images/director.png" class="img-fluid rounded-circle mb-3" widthalt="">
-        <h5>Prof. Sivaji Bandyopadhyay</h5>
-        <p>Director, Nit Silchar</p>
+        <h5 class="card-title">Prof. Sivaji Bandyopadhyay</h5>
+        <p class="card-content">Director, Nit Silchar</p>
       </div>
       <div class="col-lg-8 d-flex justify-content-center">
         <p class="homeContent">
