updated event page

--- a/North_East_Green_summit.html
+++ b/North_East_Green_summit.html
@@ -93,7 +93,7 @@
                 <img src="./images/negs10.jpeg" alt="North_East_Green_Summit" style="width: 21em;">
             </div>
              <div class="col-xs-12 my-3 my-xl-0 pt-4 px-3">
-                <img src="./images/negs12.jpeg" alt="North_East_Green_Summit" style="width: 21em;">
+                <img src="./images/negs12.jpg" alt="North_East_Green_Summit" style="width: 21em;">
             </div>
              <div class="col-xs-12 my-3 my-xl-0 pt-4 px-3">
                 <img src="./images/negs11.jpeg" alt="North_East_Green_Summit" style="width: 21em;">
