corrected some bugs

--- a/Gallery.html
+++ b/Gallery.html
@@ -60,13 +60,13 @@
 
         <div class="card_s01 row">
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <a href="swacchta_pakhwada.html"><img src="./images/Swacchta Pakhwada.png" class="card-img-top mx--3" alt="Swacchta Pakhwada"></a>
+                <a href="swacchta_pakhwada.html"><img src="./images/Swacchta Pakhwada.png" class="card-img-top" alt="Swacchta Pakhwada"></a>
                 <div class="card-body">
                 <p class="card-text">Swacchta Pakhwada</p>
                 </div>
             </div>
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <a href="North_East_Green_summit.html"><img src="./images/North East Green Summit.png" class="card-img-top mx--3" alt="North East Green Summit"></a>
+                <a href="North_East_Green_summit.html"><img src="./images/North East Green Summit.png" class="card-img-top" alt="North East Green Summit"></a>
                 <div class="card-body">
                 <p class="card-text">North-East Green Summit</p>
                 </div>
@@ -74,13 +74,13 @@
         </div>
         <div class="card_s1 row">
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <a href="gandhi_jayanti.html"><img src="./images/Gandhi Jayanti.png" class="card-img-top mx--3" alt="Gandhi Jayanti"></a>
+                <a href="gandhi_jayanti.html"><img src="./images/Gandhi Jayanti.png" class="card-img-top" alt="Gandhi Jayanti"></a>
                 <div class="card-body">
                 <p class="card-text">Gandhi Jayanti</p>
                 </div>
             </div>
             <div class="card my-3 my-xl-0" style="width: 28rem;">
-                <a href="World-Environment-Day.html"><img src="./images/World Environment Day.jpg" style="width: 26rem; height: 17rem;" class="card-img-top mx--3" alt="World Environment Day"></a>
+                <a href="World-Environment-Day.html"><img src="./images/World Environment Day.jpg" style="width: 26rem; height: 17rem;" class="card-img-top" alt="World Environment Day"></a>
                 <div class="card-body">
                 <p class="card-text">World Environment Day</p>
                 </div>
@@ -258,7 +258,3 @@
 
 </body>
 </html>
-
-
-
-
