adding the nav bar

--- a/home.html
+++ b/home.html
@@ -153,7 +153,8 @@
             <h5 class="card-title text-center">District Green Champion Award</h5>
             <div class="card-content">
               <p class="card-text">Green environment, our requirement: NIT Silchar was honoured with the District Green
-                Champion award by the government of India.
+                Champion award by the government of India. This was and still proves to be a moment of great pride for
+                the institution and has inspired each and everyone to be consistent in their green endeavours.
               </p>
             </div>
           </div>
@@ -167,8 +168,10 @@
             <h5 class="card-title text-center">UI Green Metric Ranking 200 in 2021</h5>
             <div class="card-content">
               <p class="card-text">NIT Silchar was placed 200th among 956 universities across the world by the UI Green
-                Metric World University Rankings, 2021. Green hearth, Green Earth; a few steps today ensures a greener
-                future tomorrow!</p>
+                Metric World University Rankings, 2021. Our institution has then and again proven to be a huge
+                contribution in creating a cleaner future. Green hearth, Green Earth; a few steps today ensures a
+                greener future tomorrow!
+              </p>
             </div>
           </div>
         </div>
@@ -178,7 +181,12 @@
           <img class="card-img-top" src="./images/achievements.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-center">6 glorious years of existence</h5>
-
+            <div class="card-content">
+              <p class="card-text">The NITS Eco Club has completed almost 6 years of its existence, in which, it has not
+                only proven to be one of the most prestigious clubs of the institution but has also helped to bring
+                about a great admiration for our institution within the North Eastern region.
+              </p>
+            </div>
           </div>
         </div>
       </div>
