--- a/navbar.html
+++ b/navbar.html
@@ -2,94 +2,106 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap link-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <title>navigation bar</title>
+    <link rel="stylesheet" href="navbar.css">
+
+
 </head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&family=Mulish:wght@300&display=swap"
-  rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<style>
-  .navbar-container {
-    width: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 60px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    align-items: center;
-  }
-
-  a {
-    text-decoration: none;
-    position: relative;
-    left: 55px;
-    color: black;
-
-  }
-
-
-  a:hover {
-    color: rgb(51, 223, 51);
-  }
-
-  #club-name {
-    position: relative;
-    font-family: 'Montserrat', sans-serif;
-    top: -10px;
-  }
-
-  #logo-img {
-
-    height: 26px;
-    width: 26px;
-    position: relative;
-    left: -35px;
-    top: 24px;
-    border: 0px;
-    border-radius: 16px;
-  }
-</style>
 
 <body>
-  <div class="navbar-container">
+    <div class="navbar">
 
-    <div class="navbar-logo-name">
+        <div class="box"><img id="logo" src="./images/eco-club-logo.jpg.jpg" alt="">
+            <h3 id="heading-name">Eco-Club</h3>
+        </div>
 
-      <img id="logo-img" src="./images/eco-club-logo.jpg" alt="">
 
-      <h2 id="club-name">eco club</h2>
+        <div class="box" id="logo-box">
+            &nbsp
+
+            <!--............... dropdown menu ................. -->
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+
+                    <!--................ icon    .............. -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-list" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                    </svg>
+
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#"> HOME</a></li>
+                    <li><a class="dropdown-item" href="#"> NOIXORGO</a></li>
+                    <li><a class="dropdown-item" href="#"> GALLERY</a></li>
+                    <li><a class="dropdown-item" href="#"> EVENTS</a></li>
+                    <li><a class="dropdown-item" href="#"> BLOG</a></li>
+                    <li><a class="dropdown-item" href="#"> TEAM</a></li>
+                </ul>
+            </div>
+
+            <!--........... logo-box end....... -->
+        </div>
+
+
+        <!--............................ links  ............................ -->
+
+        <div id="box-3" class="box hide">
+
+            <ul class="hide">
+                <li class="hide-element"><a href="">HOME</a></li>
+                <li class="hide-element"><a href="">NOIXORGO</a></li>
+                <li class="hide-element"><a href="">GALLERY</a></li>
+                <li class="hide-element"><a href="">EVENTS</a></li>
+                <li class="hide-element"><a href="">BLOG</a></li>
+                <li class="hide-element"><a href="">TEAM</a></li>
+            </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
 
     </div>
 
 
 
-    <a href="">HOME</a>
+    <!-- javascript -bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
 
-
-    <a href="">NOIXORGO</a>
-
-
-
-    <a href="">GALLERY</a>
-
-
-    <a href="">EVENTS</a>
-
-
-    <a href="">BLOG</a>
-
-
-    <a href="">TEAM</a>
-
-
-
-  </div>
 </body>
 
 </html>
